fixed the responsiveness on mobile view

--- a/dash.css
+++ b/dash.css
@@ -25,7 +25,7 @@ body {
 .main-container {
   width: clamp(350px, 80%, 400px);
   min-width: 250px;
-  min-height: 700px;
+  min-height: 600px;
   display: flex;
   justify-content: start;
   align-items: center;
@@ -183,6 +183,11 @@ body {
 }
 
 
-
+@media (max-width: 400px){
+  .main-container {
+    min-height: 700px;
+  }
+  
+}
 
 
